# TSCHAT_backend

./: .gitignore  README.md  backend_svr_quit.sh  backend_svr_restart.sh  backend_svr_start.sh  db.sqlite3  pyproject.toml
API/: models.py  serializers.py  urls.py  views.py
API/migrations/: 0001_initial.py  0002_message_created_at_message_is_read_and_more.py
config/: asgi.py  settings.py  urls.py
install/: msodbcsql17.rpm  rhel_8__odbc_17 copy.sh  ubuntu_odbc_17.sh
install/odbc/: path.txt
tschat/: manage.py
tschat/config/: asgi.py  settings.py  wsgi.py
tschat/tschat/: settings.py  urls.py  wsgi.py
